src/test/deca/context/invalid/provided/parametre_void.deca
class A {
  int x;
  void setX(void x) {this.x = x;}
}
